# cpsc-449-assignment-1

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  ipython_setup.py  poetry.toml  pyproject.toml
.docker/: .dockerignore  .env  .zshrc  Dockerfile  await-db.sh  docker-compose.yml  entrypoint.sh
.docker/iam-service/: Dockerfile
.docker/inventory-service/: Dockerfile  await-es.sh  entrypoint.sh
.docker/inventory-service/rq/: Dockerfile  entrypoint.sh
.docker/inventory-service/service/: Dockerfile
.docker/nginx/: nginx.conf
fim_shared/: README.md  poetry.toml  pyproject.toml
fim_shared/src/fim/: api.py  authentication.py  interface.py  models.py  schemas.py  settings.py
iam_service/: README.md  ipython_setup.py  poetry.toml  pyproject.toml
iam_service/src/iam/: __init__.py  api.py  app.py  authentication.py  constants.py  interface.py  models.py  schemas.py  settings.py  tags.py  utils.py
inventory_service/: .gitignore  ipython_setup.py  poetry.toml  pyproject.toml
inventory_service/src/inventory/: __init__.py  api.py  app.py  authentication.py  constants.py  models.py  redis_client.py  schemas.py  settings.py  tags.py  tasks.py  utils.py  worker.py
src/flask_app/: CPSC-449 Assignment 1.postman_collection.json  __init__.py  app.py  settings.py
src/flask_app/base/: __init__.py  api.py  authentication.py  constants.py  interface.py  models.py  schemas.py
src/flask_app/common/: tags.py
src/flask_app/iam/: api.py  authentication.py  interface.py  models.py  schemas.py  utils.py
src/flask_app/inventory/: api.py  models.py  schemas.py
src/flask_app/migrations/versions/: 374fbada0ebf_.py  5339059f0ca2_add_user_is_superuser_row.py  535d254c3666_initial_migration.py  54b7f123f251_.py  8d6ba893f481_change_inventoryitem_to_inventory.py  974d976c10c9_.py  a1df335b0734_update_cascade_delete_relationship.py  ea228b14ed92_.py
